--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   url_launcher: ^6.3.1
   flutter_zoom_drawer: ^3.2.0
   persistent_bottom_nav_bar: ^6.2.1
+  # Firebase core for Flutter
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.7.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
