--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   dots_indicator: ^3.0.0
   dotted_border: ^2.1.0
   file_picker: ^8.1.4
+  geolocator: ^11.0.0
+  geocoding: ^2.1.0
   flutter:
     sdk: flutter
   flutter_spinkit: ^5.2.1
@@ -38,6 +40,8 @@ dependencies:
   # Firebase core for Flutter
   firebase_core: ^3.6.0
   firebase_auth: ^5.7.0
+  google_sign_in: ^6.2.1
+  cloud_firestore: ^5.6.12
 
 dev_dependencies:
   flutter_lints: ^5.0.0
