--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_auth: ^5.7.0
   google_sign_in: ^6.2.1
   cloud_firestore: ^5.6.12
+  flutter_datetime_picker_plus: ^2.2.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
