--- a/app/ios/Runner/Info.plist
+++ b/app/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 		<true/>
 		<key>UIApplicationSupportsIndirectInputEvents</key>
 		<true/>
+		<key>NSCameraUsageDescription</key>
+		<string>This app needs access to the camera to take photos for events.</string>
+		<key>NSPhotoLibraryUsageDescription</key>
+		<string>This app needs access to the photo library to select images for events.</string>
 	</dict>
 </plist>
