--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_sign_in: ^6.2.1
   cloud_firestore: ^5.6.12
   flutter_datetime_picker_plus: ^2.2.0
+  geoflutterfire_plus: ^0.0.32
 
 dev_dependencies:
   flutter_lints: ^5.0.0
