--- a/app/.gitignore
+++ b/app/.gitignore
@@ -41,3 +41,6 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Firebase Admin SDK private keys (sensitive)
+**/android/app/*-firebase-adminsdk-*.json
